Fix selectedRoleCount, add hover text to dropdown menu, fix spacing with too long names

--- a/css/groups.css
+++ b/css/groups.css
@@ -36,6 +36,44 @@ body.btr-hide-ads .content {
 	margin: 0;
 }
 
+.btr-redesign group-members-list .dropdown-menu li a:defined {
+	display: flex;
+}
+
+.btr-redesign group-members-list .dropdown-menu li a .text-overflow {
+	max-width: none;
+	flex: 1 1 auto;
+}
+
+.btr-redesign group-members-list .dropdown-menu li a .role-member-count {
+	flex: 0 0 auto;
+}
+
+.btr-redesign group-members-list .dropdown-menu li a .role-member-count::before {
+	content: " ";
+	white-space: pre;
+}
+
+.btr-redesign group-members-list .input-group-btn > button {
+	display: flex;
+}
+
+.btr-redesign group-members-list .input-group-btn > button > * {
+	flex: 0 0 auto;
+}
+
+.btr-redesign group-members-list .input-group-btn > button .rbx-selection-label {
+	flex: 1 1 auto;
+}
+
+.btr-redesign group-members-list .input-group-btn > button .btr-role-member-count {
+	float: right;
+	font-size: 16px;
+	line-height: 26px;
+	font-weight: 300;
+	padding-right: 2px;
+}
+
 .btr-hidePayout group-payouts,
 .btr-hideBigSocial social-links-container {
 	display: none;
